Fix layout issue for main content

--- a/scss/layouts/_media-queries.scss
+++ b/scss/layouts/_media-queries.scss
@@ -12,7 +12,7 @@
 
     .container--flex {
         width: 90%;
-        margin: rem(120px) auto 0;
+        margin: rem(100px) auto 0;
         display: flex;
         gap: rem(30px);
         justify-content: center;
